system/etc/iptables/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]

# Prevent users of group "no-internet" to access the Internet
-A OUTPUT -m owner --gid-owner no-internet -j DROP

:OUTPUT ACCEPT [1374:226877]
:TCP - [0:0]
:UDP - [0:0]
# allow outgoing connections, drop incoming:
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP

# allow SSH:
-A INPUT -m state --state NEW,ESTABLISHED,RELATED --source 192.168.0.21 -p tcp --dport 519 -j ACCEPT
-A INPUT -m state --state NEW,ESTABLISHED,RELATED --source 192.168.0.227 -p tcp --dport 519 -j ACCEPT
# allow VPN (not working):
#-A FORWARD -m state --state NEW,ESTABLISHED,RELATED --source 141.26.64.127 -p tcp --dport 1723 -j ACCEPT
#-A FORWARD -m state --state NEW,ESTABLISHED,RELATED --source 141.26.64.127 -p 47 -j ACCEPT
# allow VNC:
-A INPUT -m state --state NEW,ESTABLISHED,RELATED --source 192.168.0.21 -p tcp --dport 5900 -j ACCEPT
-A INPUT -m state --state NEW,ESTABLISHED,RELATED --source 192.168.0.227 -p tcp --dport 5900 -j ACCEPT
# allow mpd from internal network (connection, streaming and Web interface):
-A INPUT -m state --state NEW,ESTABLISHED,RELATED --source 192.168.0.0/24 -p tcp --dport 6600 -j ACCEPT
-A INPUT -m state --state NEW,ESTABLISHED,RELATED --source 192.168.0.0/24 -p tcp --dport 6680 -j ACCEPT
-A INPUT -m state --state NEW,ESTABLISHED,RELATED --source 192.168.0.0/24 -p tcp --dport 8000 -j ACCEPT
# allow GPMDP remote control:
-A INPUT -m state --state NEW,ESTABLISHED,RELATED --source 192.168.0.0/24 -p tcp --dport 5672 -j ACCEPT
# Chromecast
-A INPUT -s 192.168.178.0/24 -p udp -m udp --dport 32768:61000 -j ACCEPT

# reject connections for unopened ports:
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-proto-unreachable

# limit echos, pings, scans:
-A INPUT -p icmp -m icmp --icmp-type 8 -m recent --set --name ping_limiter --mask 255.255.255.255 --rsource
-A INPUT -p icmp -m icmp --icmp-type 8 -m recent --update --seconds 4 --hitcount 6 --name ping_limiter --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A UDP -p udp -m recent --update --seconds 60 --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with icmp-port-unreachable

COMMIT
